# remote-input-board

./: .gitignore  README.md  pyproject.toml
py_remote_input/: __init__.py  __main__.py  logger.py  server.py  typer.py  web.py  websocket.py
py_remote_input/templates/: index.html
tests/: test_typer.py  test_web.py  test_websocket.py
